# prisoners-dilemma

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: cli.py  engine.py  media.py  tournament.py  web.py
app/static/: app.js  styles.css
app/strategies/: __init__.py  always_cooperate.py  always_defect.py  base.py  grim_trigger.py  grudger.py  media_informed.py  prober.py  random_strategy.py  responsive.py  soft_grudger.py  tit_for_tat.py  win_stay_lose_shift.py
app/templates/: index.html
outlets/: balanced.json  sensational.json
