[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pd-tournament"
version = "0.1.0"
description = "Dockerized Iterated Prisoner's Dilemma tournament"
authors = [{name="You"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Flask>=2.3",
]

[tool.setuptools.package-dir]
"" = "app"

[tool.setuptools.packages.find]
where = ["app"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"app" = [
    "templates/*.html",
    "static/*.css",
    "static/*.js",
]
